--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
-            android:background="@android:color/transparent"
+            android:backgroundTint="#6889FF"
             android:text="@string/exchange"
             android:textColor="@android:color/white" />
     </androidx.appcompat.widget.Toolbar>
@@ -39,19 +39,19 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_accounts_from"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="160dp"
+        android:layout_marginTop="24dp"
         android:orientation="horizontal"
         android:padding="8dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintBottom_toTopOf="@id/arrow_down"
         app:layout_constraintTop_toBottomOf="@id/toolbar" />
 
     <ImageView
         android:id="@+id/arrow_down"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@android:drawable/arrow_down_float"
-        app:layout_constraintBottom_toTopOf="@id/recycler_accounts_to"
+        android:layout_marginTop="24dp"
+        android:src="@drawable/arrow_down"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/recycler_accounts_from" />
@@ -59,11 +59,11 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_accounts_to"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="160dp"
+        android:layout_marginTop="24dp"
         android:orientation="horizontal"
         android:padding="8dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/arrow_down" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
