--- a/app/src/main/res/layout/item_account.xml
+++ b/app/src/main/res/layout/item_account.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="80dp"
+    android:layout_height="match_parent"
+    android:layout_marginHorizontal="8dp"
     android:background="@drawable/card_background"
-    android:gravity="fill_vertical"
+    android:gravity="center"
     android:orientation="vertical"
     android:padding="16dp">
 
@@ -11,25 +12,32 @@
         android:id="@+id/tvCurrency"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:gravity="center"
         android:text="USD"
+        android:textColor="@color/black"
         android:textSize="16sp"
-        android:textStyle="bold"
-        android:gravity="center"/>
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tvBalance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="100.00"
-        android:textSize="14sp"
-        android:gravity="center"/>
+        android:layout_weight="1"
+        android:gravity="center"
+        android:text="@string/on_account"
+        android:textColor="@color/black"
+        android:textSize="14sp" />
 
     <EditText
         android:id="@+id/etAmount"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/enter_summ"
-        android:inputType="numberDecimal"
+        android:layout_weight="1"
         android:gravity="center"
-        android:visibility="gone"/>
+        android:inputType="numberDecimal"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textSize="24sp"
+        android:visibility="visible" />
 </LinearLayout>
